# tiles

./: Cargo.toml  README.md  design.md  grid.ron
src/: grid.rs  main.rs  objects.rs  screens.rs  tile.rs  timer.rs
src/game/: ui.rs
src/game/logic/: grid.rs
src/game/logic/grid/: anim.rs  tile.rs  vec_grid.rs
src/game/ui/: anim_widgets.rs  grid_widget.rs  tile_widget.rs
src/game/ui/anim_widgets/: clearing.rs  moving.rs
src/grid/: animation.rs  grid_layout.rs  grid_widget.rs  mod.rs  tile.rs  vec_grid.rs  widget.rs
src/grid/tile/: clearing.rs  moving.rs
src/screens/: file_picker.rs  game.rs  game_screen.rs  menu.rs  menu_screen.rs
