[package]
name = "tiles"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.17", features = ["serde"] }
ratatui = { version = "0.30", features = ["serde"] }
crossterm = "0.29"
ron = "0.12"
union-find = "0.4"
uid = "0.1"
color-eyre = "0.6"
